# worldcup-oracle

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/oracle/: __init__.py  agent.py  api.py  bracket.py  cli.py  config.py  dashboard.py  models.py  schema.py  simulate.py  store.py  trace.py
backend/oracle/eval/: __init__.py  backtest.py  baselines.py  metrics.py
backend/oracle/personas/: __init__.py  personas.py
backend/oracle/prompts/: predict.md
backend/oracle/tools/: __init__.py  api_football.py  cache.py  espn.py
backend/tests/: test_agent.py  test_metrics.py
backend/tests/fixtures/: mock_data.json
docs/: 00-overview.md  01-problem.md  02-spec.md  03-spec-driven-dev.md  04-build.md  05-tools-data.md  06-models-battle.md  07-persona.md  08-evals.md  09-results.md
docs/scripts/: angle-a-bookies.md  angle-b-battle.md  angle-c-persona.md  video-1-oracle.md  video-2-battle.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Cards.tsx  FeatureReel.tsx  Leaderboard.tsx  ModelBattleTab.tsx  ModelLogo.tsx  Scoreboard.tsx  SimulationTab.tsx  TraceView.tsx  icons.tsx  primitives.tsx
frontend/components/bracket/: BracketCanvas.tsx  BracketMatch.tsx  ChampionReveal.tsx  SimControls.tsx
frontend/lib/: brands.ts  format.ts  sim.ts  types.ts
frontend/public/data/: dashboard.json
spec/: AGENT_SPEC.md  EVAL_SPEC.md
