[project]
name = "worldcup-oracle"
version = "0.1.0"
description = "An AI agent that predicts FIFA World Cup 2026 matches (accuracy, model battle, persona)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cursor-sdk>=0.1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
oracle = "oracle.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API uses function calls (typer.Option/Argument) as argument defaults.
"oracle/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
